--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "lint": "bunx @biomejs/biome check --write --unsafe .",
     "preview": "vite preview",
     "tauri": "tauri"
   },
@@ -23,6 +24,7 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.2",
     "@tauri-apps/cli": "^2",
     "@types/node": "^24.0.15",
     "@types/react": "^18.3.1",
